--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav id="barranavegacio">
             <ul>
-                <li><a href="/wiki (The Legend Of Zelda Breath Of The Wild)/index.html">Inici</a></li>
-                <li><a href="/wiki (The Legend Of Zelda Breath Of The Wild)/Historia/index.html">Sobre nosaltres</a></li>
-                <li><a href="/wiki (The Legend Of Zelda Breath Of The Wild)/Personatges/index.html">Plats</a></li>
-                <li><a href="/wiki (The Legend Of Zelda Breath Of The Wild)/Contacte/index.html">Contacte</a></li>
+                <li><a href="">Inici</a></li>
+                <li><a href="">Sobre nosaltres</a></li>
+                <li><a href="">Plats</a></li>
+                <li><a href="">Contacte</a></li>
             </ul>
         </nav>
     </header>
