--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <header>
         <nav id="barranavegacio">
+            <div id="logo">
+                <img src="logo.png">
+            </div>
+
             <ul>
                 <li><a href="">Inici</a></li>
                 <li><a href="">Sobre nosaltres</a></li>
