--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav id="barranavegacio">
             <div id="logo">
-                <img src="logo.png">
+                <img width=50px src="https://copilot.microsoft.com/th/id/BCO.fa2ddb9a-6e5b-451e-9c5d-632b9a961509.png">
             </div>
 
             <ul>
