--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
             </ul>
         </nav>
     </header>
+
+    <div id="titol">
+        <h2>Super Pizza</h2>
+        <p>La pizza que roda amd tú</p>
+    </div>
 </body>
 </html>
