--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <nav id="barranavegacio">
-            <div id="logo">
+        <nav class="barranavegacio">
+            <div class="logo">
                 <img width=50px src="https://copilot.microsoft.com/th/id/BCO.fa2ddb9a-6e5b-451e-9c5d-632b9a961509.png">
             </div>
 
@@ -22,9 +22,53 @@
         </nav>
     </header>
 
-    <div id="titol">
-        <h2>Super Pizza</h2>
-        <p>La pizza que roda amd tú</p>
+    <div class="encapçalament">
+        <h2 class="titol">Super Pizza</h2>
+        <p class="subtitol">La pizza que roda amb tú</p>
     </div>
+
+    <div class="encapçalament">
+        <h2 class="titol">Pizzes destacades</h2>
+    </div>
+
+    <div class="targetes">
+        <div class="targeta">
+            <img src="https://media.istockphoto.com/id/1744442094/es/foto/pizza-quattro-fromaggi-sobre-una-tabla-de-madera-pizza-de-cuatro-quesos-o-pizza-quattro.jpg?s=612x612&w=0&k=20&c=9ja-y6sGsLKxORGUEraShO2cfU9ZBSsliNPQkdLRk8g=">
+            <h3>Pizza 4 quesos</h3>
+            <p class="descripcio">Una pizza cremosa i plena de sabor, elaborada amb una barreja irresistible de 
+                quatre formatges fosos: mozzarella, gorgonzola, parmesà i emmental. La seva combinació 
+                crea una textura suau i una aroma intensa que conquereix els amants del formatge.</p>
+            <a href="#" class="boto">Veure més</a>
+        </div>
+
+        <div class="targeta">
+            <img src="https://media.istockphoto.com/id/518397340/es/foto/pizza-en-mesa-de-madera-vista-superior.jpg?s=612x612&w=0&k=20&c=SrDAA8656mI7xRuz4GGjg8p3q4OMlTx7WNcmlEB-8iI=">
+            <h3>Pizza de pernil i formatge</h3>
+            <p class="descripcio">La clàssica i sempre apetible pizza amb base de mozzarella fosa i 
+                fines rodanxes de pernil. El seu sabor equilibrat entre el salat del pernil i el 
+                suau del formatge la converteix en una opció deliciosa i molt popular.</p>
+            <a href="#" class="boto">Veure més</a>
+        </div>
+    </div>
+
+    <footer class="footer">
+    <div class="footertitol">
+        <h3>Super Pizza</h3>
+    </div>
+
+    <div class="xarxessocials">
+        <a href="#"><img src="facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="instagram.png" alt="Instagram"></a>
+        <a href="#"><img src="twitter.png" alt="Twitter"></a>
+    </div>
+
+    <div class="linksutils">
+        <a href="#">Inici</a>
+        <a href="#">Sobre nosaltres</a>
+        <a href="#">Plats</a>
+        <a href="#">Contacte</a>
+    </div>
+    </footer>
+
 </body>
 </html>
