--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </div>
 
     <div class="xarxessocials">
-        <a href="#"><img src="facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="twitter.png" alt="Twitter"></a>
+        <a href="https://www.facebook.com/?locale=es_ES"><img src="https://img.icons8.com/color/1200/facebook.jpg" alt="Facebook"></a>
+        <a href="https://www.instagram.com/"><img src="https://static.vecteezy.com/system/resources/previews/042/148/632/non_2x/instagram-logo-instagram-social-media-icon-free-png.png" alt="Instagram"></a>
+        <a href="https://x.com/?lang=es"><img src="https://images.freeimages.com/image/large-previews/8ea/x-twitter-white-logo-on-black-5694249.png" alt="Twitter"></a>
     </div>
 
     <div class="linksutils">
