--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +14,10 @@
             </div>
 
             <ul>
-                <li><a href="">Inici</a></li>
-                <li><a href="">Sobre nosaltres</a></li>
-                <li><a href="">Plats</a></li>
-                <li><a href="">Contacte</a></li>
+                <li><a href="index.html">Inici</a></li>
+                <li><a href="/sobrenosaltres/index.html">Sobre nosaltres</a></li>
+                <li><a href="/plats/index.html">Plats</a></li>
+                <li><a href="/contacte/index.html">Contacte</a></li>
             </ul>
 
             <div class="hamburguesa">
@@ -67,10 +67,10 @@
     </div>
 
     <div class="linksutils">
-        <a href="#">Inici</a>
-        <a href="#">Sobre nosaltres</a>
-        <a href="#">Plats</a>
-        <a href="#">Contacte</a>
+        <a href="index.html">Inici</a>
+        <a href="/sobrenosaltres/index.html">Sobre nosaltres</a>
+        <a href="/plats/index.html">Plats</a>
+        <a href="/contacte/index.html">Contacte</a>
     </div>
     </footer>
 
