--- a/sobrenosaltres/index.html
+++ b/sobrenosaltres/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superpizza</title>
+    <title>Sobre nosaltres</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://copilot.microsoft.com/th/id/BCO.fa2ddb9a-6e5b-451e-9c5d-632b9a961509.png" type="image/x-icon">
 </head>
