--- a/plats/index.html
+++ b/plats/index.html
@@ -15,10 +15,10 @@
             </div>
 
             <ul>
-                <li><a href="index.html">Inici</a></li>
-                <li><a href="/sobrenosaltres/index.html">Sobre nosaltres</a></li>
-                <li><a href="/plats/index.html">Plats</a></li>
-                <li><a href="/contacte/index.html">Contacte</a></li>
+                <li><a href="/Food truck responsive/index.html">Inici</a></li>
+                <li><a href="/Food truck responsive/sobrenosaltres/index.html">Sobre nosaltres</a></li>
+                <li><a href="/Food truck responsive/plats/index.html">Plats</a></li>
+                <li><a href="/Food truck responsive/contacte/index.html">Contacte</a></li>
             </ul>
 
             <div class="hamburguesa">
