--- a/contacte/index.html
+++ b/contacte/index.html
@@ -54,10 +54,10 @@
     </div>
 
     <div class="linksutils">
-        <a href="index.html">Inici</a>
-        <a href="/sobrenosaltres/index.html">Sobre nosaltres</a>
-        <a href="/plats/index.html">Plats</a>
-        <a href="/contacte/index.html">Contacte</a>
+        <a href="/Food truck responsive/index.html">Inici</a>
+        <a href="/Food truck responsive/sobrenosaltres/index.html">Sobre nosaltres</a>
+        <a href="/Food truck responsive/plats/index.html">Plats</a>
+        <a href="/Food truck responsive/contacte/index.html">Contacte</a>
     </div>
     </footer>
 
