--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="descripcio">Una pizza cremosa i plena de sabor, elaborada amb una barreja irresistible de 
                 quatre formatges fosos: mozzarella, gorgonzola, parmesà i emmental. La seva combinació 
                 crea una textura suau i una aroma intensa que conquereix els amants del formatge.</p>
-            <a href="/plats/index.html" class="boto">Veure més</a>
+            <a href="/Food truck responsive/plats/index.html" class="boto">Veure més</a>
         </div>
 
         <div class="targeta">
@@ -52,7 +52,7 @@
             <p class="descripcio">La clàssica i sempre apetible pizza amb base de mozzarella fosa i 
                 fines rodanxes de pernil. El seu sabor equilibrat entre el salat del pernil i el 
                 suau del formatge la converteix en una opció deliciosa i molt popular.</p>
-            <a href="/plats/index.html" class="boto">Veure més</a>
+            <a href="/Food truck responsive/plats/index.html" class="boto">Veure més</a>
         </div>
     </div>
 
@@ -68,10 +68,10 @@
     </div>
 
     <div class="linksutils">
-        <a href="index.html">Inici</a>
-        <a href="/sobrenosaltres/index.html">Sobre nosaltres</a>
-        <a href="/plats/index.html">Plats</a>
-        <a href="/contacte/index.html">Contacte</a>
+        <a href="/Food truck responsive/index.html">Inici</a>
+        <a href="/Food truck responsive/sobrenosaltres/index.html">Sobre nosaltres</a>
+        <a href="/Food truck responsive/plats/index.html">Plats</a>
+        <a href="/Food truck responsive/contacte/index.html">Contacte</a>
     </div>
     </footer>
 
